# urlShortening

./: .gitignore  LICENSE  README.md  basic.py  bitly.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
app/: core.py  main.py  utils.py
tests/: test_core.py
