[project]
name = "urlShortening"
version = "0.1.0"
description = "A simple URL shortener application."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/Dmukherjeetextiles/urlShortening"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]